--- a/record/record.css
+++ b/record/record.css
@@ -1,19 +1,45 @@
-html, body {
+html, body,div {
   padding: 0;
   margin: 0;
 }
 
+
+.buttonContainer{
+	margin:0 auto;
+	width:400px;
+	height:100px;
+}
+
+.optButton{
+	background-color: #4CAF50; /* Green */
+	width:50px;
+    color: white;
+    padding: 0px 10px 0px 10px;
+    font-size: 18px;
+	line-height:36px;
+	border-radius:4px;
+	display:inline-block;
+	margin:27px 20px 10px 80px;
+	text-align:center;
+}
+
+.optButton:hover{
+	background-color:#90EE90;
+}
+
+.optButton:hover{
+	color:red;
+}
+
+
 .rowDiv {
   width: 100%;
-  padding: 4px;
+  padding: 4px 0 4px 0;
   font-size: 1.5em;
-  text-align: center;
+  text-align: left;
   cursor: pointer;
 }
 
 .rowDiv:hover {
   background-color: #CFF2F2;
-}
-:hover{
-	
 }
