--- a/record/record.css
+++ b/record/record.css
@@ -3,7 +3,6 @@ html, body,div {
   margin: 0;
 }
 
-
 .buttonContainer{
 	margin:0 auto;
 	width:400px;
@@ -12,34 +11,95 @@ html, body,div {
 
 .optButton{
 	background-color: #4CAF50; /* Green */
-	width:50px;
+	width:60px;
     color: white;
-    padding: 0px 10px 0px 10px;
-    font-size: 18px;
-	line-height:36px;
+    font-size: 24px;
 	border-radius:4px;
 	display:inline-block;
-	margin:27px 20px 10px 80px;
+	margin:30px 20px 10px 40px;
 	text-align:center;
+	-webkit-user-select:none;
+    -moz-user-select:none;
+    -ms-user-select:none;
+    user-select:none;
 }
 
 .optButton:hover{
 	background-color:#90EE90;
-}
-
-.optButton:hover{
 	color:red;
+	cursor: pointer;
 }
-
+.optButton:active{
+	background-color:#73fc80;
+}
 
 .rowDiv {
-  width: 100%;
-  padding: 4px 0 4px 0;
-  font-size: 1.5em;
+  font-size: 24px;
   text-align: left;
-  cursor: pointer;
 }
 
-.rowDiv:hover {
-  background-color: #CFF2F2;
+.showURL{
+	width:100%;
+	position:absolute;
+	left:0px;
+	top:0px;
+	white-space:nowrap;
+	overflow:hidden;
 }
+/* 鼠标移动显示隐藏内容 */
+.showURL:hover{
+	background-color:#90EE90;
+	overflow:visible;
+	white-space:normal;
+	word-break:break-all;
+	height: auto;
+	z-index:1;
+	/* height:200px; */
+	/* overflow-y:auto; */
+}
+
+.removeButton{
+	background-color: #4CAF50;
+	color: white;
+    font-size: 24px;
+	border-radius:4px;
+	text-align:center;
+	-webkit-user-select:none;
+    -moz-user-select:none;
+    -ms-user-select:none;
+    user-select:none;
+}
+
+.removeButton:hover{
+	background-color:#90EE90;
+	color:red;
+	cursor: pointer;
+}
+
+.removeButton:active{
+	background-color:#73fc80;
+}
+table {
+	width:100%;
+	border-right:solid 1px red;
+	border-bottom:solid 1px red;
+	border-collapse:collapse;
+}
+th{
+	padding:0;
+	border-left:solid 1px red;
+	border-top:solid 1px red;
+}
+td{
+	padding:0;
+	border-left:solid 1px red;
+	border-top:solid 1px red;
+}
+/* td:hover { */
+	/* background-color: red; */
+  /* 鼠标移动显示隐藏内容 */
+    /* overflow: visible; */
+	/* white-space: normal; */
+	/* word-break: break-all; */
+	/* height: auto; */
+/* } */
